  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Fix broken repository 500 errors in project list
  - Close todos when accepting merge requests via the API !6486 (tonygambone)
  - Changed Slack service user referencing from full name to username (Sebastian Poxhofer)
  - Add Container Registry on/off status to Admin Area !6638 (the-undefined)

v 8.12.4 (unreleased)
  - Fix type mismatch bug when closing Jira issue
  - Fix issues importing services via Import/Export
  - Restrict failed login attempts for users with 2FA enabled
  - Fix "Copy to clipboard" tooltip to say "Copied!" when clipboard button is clicked. (lukehowell)

v 8.12.3
  - Update Gitlab Shell to support low IO priority for storage moves

v 8.12.2 (unreleased)
  - Fix Import/Export not recognising correctly the imported services.
  - Fix snippets pagination
  - Fix "Create project" button layout when visibility options are restricted
  - Fix List-Unsubscribe header in emails
  - Fix IssuesController#show degradation including project on loaded notes
  - Fix an issue with the "Commits" section of the cycle analytics summary. !6513
  - Fix errors importing project feature and milestone models using GitLab project import
  - Make JWT messages Docker-compatible
  - Fix duplicate branch entry in the merge request version compare dropdown
  - Respect the fork_project permission when forking projects
  - Only update issuable labels if they have been changed
  - Fix bug where 'Search results' repeated many times when a search in the emoji search form is cleared (Xavier Bick) (@zeiv)
  - Fix resolve discussion buttons endpoint path

v 8.12.1